// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Accounts: action change account filter 1`] = `
Object {
  "filter": "search accounts",
  "type": "CHANGE_ACCOUNT_FILTER",
}
`;

exports[`Accounts: action fetch account detail failure 1`] = `
Object {
  "address": "76a3192ce9aa0531fe7e0e3489a469018c0bff03",
  "error": "ERROR",
  "name": "tanuj",
  "type": "FETCH_ACCOUNT_DETAIL_FAILURE",
}
`;

exports[`Accounts: action fetch account detail request 1`] = `
Object {
  "address": "76a3192ce9aa0531fe7e0e3489a469018c0bff03",
  "chainId": "ff7ef45acb7a775018bc765b6fdeea432aaddfcd846cf6dd9442724266b1eac9",
  "name": "tanuj",
  "type": "FETCH_ACCOUNT_DETAIL_REQUEST",
}
`;

exports[`Accounts: action fetch account detail success 1`] = `
Object {
  "address": "76a3192ce9aa0531fe7e0e3489a469018c0bff03",
  "detail": Object {
    "address": "76a3192ce9aa0531fe7e0e3489a469018c0bff03",
    "balance": "999999999999699729688",
    "code": "",
    "codeHash": "c5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
    "contractRoot": "56e81f171bcc55a6ff8345e692c0f86e5b48e01b996cadc001622fb5e363b421",
    "kind": "AddressStateRef",
    "latestBlockNum": 9,
    "next": "/eth/v1.2/account?address=76a3192ce9aa0531fe7e0e3489a469018c0bff03&index=7",
    "nonce": 8,
    "source": "",
  },
  "name": "tanuj",
  "type": "FETCH_ACCOUNT_DETAIL_SUCCESS",
}
`;

exports[`Accounts: action fetch accounts failure 1`] = `
Object {
  "error": "ERROR",
  "type": "FETCH_ACCOUNTS_FAILED",
}
`;

exports[`Accounts: action fetch accounts request 1`] = `
Object {
  "chainId": "ff7ef45acb7a775018bc765b6fdeea432aaddfcd846cf6dd9442724266b1eac9",
  "loadAddresses": true,
  "loadBalances": true,
  "type": "FETCH_ACCOUNTS",
}
`;

exports[`Accounts: action fetch accounts success 1`] = `
Object {
  "accounts": Array [
    "Admin_1085_64667",
    "Supplier1",
    "Supplier2",
    "Buyer1",
    "Buyer2",
    "Admin_1177_49507",
    "Admin_1177_39206",
    "Admin_1177_31203",
    "User_1177_14462",
    "123456789012345678901234567890123",
    "User_1177_26292",
    "User_1177_69645 ?#%!@*",
    "User_1177_59578",
    "User_1177_79118",
    "User_1177_59359",
    "User_1177_42489",
    "User_1177_37717",
    "User_1177_52307",
    "Buyer1177_18955",
    "Supplier1177_62701",
    "Admin_1301_86023",
    "Admin_1301_62816",
    "Supplier0_1301_46441",
    "Supplier1_1301_46441",
    "Supplier2_1301_46441",
    "tanuj",
  ],
  "type": "FETCH_ACCOUNTS_SUCCESSFULL",
}
`;

exports[`Accounts: action fetch balance failure 1`] = `
Object {
  "error": "ERROR",
  "type": "BALANCE_FAILURE",
}
`;

exports[`Accounts: action fetch balance request 1`] = `
Object {
  "address": "76a3192ce9aa0531fe7e0e3489a469018c0bff03",
  "type": "GET_BALANCE",
}
`;

exports[`Accounts: action fetch balance success 1`] = `
Object {
  "detail": Object {
    "balance": "3000000000000000000000",
  },
  "type": "BALANCE_SUCCESS",
}
`;

exports[`Accounts: action fetch current account detail failure 1`] = `
Object {
  "address": "76a3192ce9aa0531fe7e0e3489a469018c0bff03",
  "error": "ERROR",
  "type": "FETCH_CURRENT_ACCOUNT_DETAIL_FAILURE",
}
`;

exports[`Accounts: action fetch current account detail request 1`] = `
Object {
  "address": "76a3192ce9aa0531fe7e0e3489a469018c0bff03",
  "type": "FETCH_CURRENT_ACCOUNT_DETAIL_REQUEST",
}
`;

exports[`Accounts: action fetch current account detail success 1`] = `
Object {
  "address": "76a3192ce9aa0531fe7e0e3489a469018c0bff03",
  "detail": Object {
    "balance": "3000000000000000000000",
  },
  "type": "FETCH_CURRENT_ACCOUNT_DETAIL_SUCCESS",
}
`;

exports[`Accounts: action fetch faucet failure 1`] = `
Object {
  "error": "ERROR",
  "type": "FAUCET_FAILURE",
}
`;

exports[`Accounts: action fetch faucet request 1`] = `
Object {
  "address": "76a3192ce9aa0531fe7e0e3489a469018c0bff03",
  "name": "blockapps",
  "type": "FAUCET_REQUEST",
}
`;

exports[`Accounts: action fetch faucet success 1`] = `
Object {
  "type": "FAUCET_SUCCESS",
}
`;

exports[`Accounts: action fetch user addresses failure 1`] = `
Object {
  "error": "ERROR",
  "name": "tanuj",
  "type": "FETCH_ACCOUNT_ADDRESS_FAILURE",
}
`;

exports[`Accounts: action fetch user addresses request 1`] = `
Object {
  "chainId": "ff7ef45acb7a775018bc765b6fdeea432aaddfcd846cf6dd9442724266b1eac9",
  "loadBalances": true,
  "name": "tanuj",
  "type": "FETCH_ACCOUNT_ADDRESS_REQUEST",
}
`;

exports[`Accounts: action fetch user addresses reset user 1`] = `
Object {
  "name": "Bid",
  "type": "RESET_ACCOUNT_ADDRESS",
}
`;

exports[`Accounts: action fetch user addresses success 1`] = `
Object {
  "addresses": "76a3192ce9aa0531fe7e0e3489a469018c0bff03",
  "name": "tanuj",
  "type": "FETCH_ACCOUNT_ADDRESS_SUCCESS",
}
`;
